# booksmatch_vue

./: .env.sample  README.md  package-lock.json  package.json  pyproject.toml
scripts/: set_my_ip.js
src/: App.vue  main.js
src/assets/: main.css
src/components/: LivroList.vue
src/plugins/: api.js
src/router/: index.js
src/services/: capas.js  livros.js
src/views/: CategoriaView.vue  HomeView.vue  LivroView.vue
