
[project]
name = "booksmatch_vue"
version = "0.1.0"
description = ""
authors = [
    {name = "AmandaPires17", email = "nanapires255@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
